# tianchi_schedule_tianchi_scheduling_2018

./: .gitignore  .~lock.submit.csv#  CMakeLists.txt  Makefile.win  bestfit.cpp  bestfit.h  code - 副本.cpp  code.cpp  code.h  deployer.cpp  deployer.h  dp.cpp  dp.h  dp_lst.cpp  dp_lst.h  experiment.py  experiments.txt  global.cpp  global.h  jobs.cpp  jobs.h  match.cpp  match.h  merge.cpp  merge.h  merge_parallel.cpp  merge_parallel.h  misc.cpp  misc.h  move.cpp  move.h  move_parallel.cpp  move_parallel.h  offline.cpp  offline.h  read.cpp  read.h  readme.md  result.txt  run.sh  (+8 more)
data_preliminary/: .~lock.scheduling_preliminary_machine_resources_20180606.csv#
submit/: score.txt
