cmake_minimum_required (VERSION 2.6)
project (solve)
set (CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS} -O3 -Wall -g -ggdb -std=c++11")
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../bin)
find_package (Threads)
aux_source_directory(. DIR_SRCS)
add_executable (solve ${DIR_SRCS})
target_link_libraries (solve ${CMAKE_THREAD_LIBS_INIT})